<resources>
    <string name="app_name">NBABox</string>
    <string name="action_settings">Settings</string>
    <string name="menu_news">今日头条</string>
    <string name="menu_live">赛事直播</string>
    <string name="menu_performance">球队战绩</string>
    <string name="menu_data">数据中心</string>
    <string name="menu_account">个人中心</string>
    <string name="menu_game">俄罗斯方块</string>
    <string name="menu_setting">设置</string>
    <string name="stats_everyday">每天</string>
    <string name="stats_regular">常规赛</string>
    <string name="stats_playoffs">季后赛</string>
    <string name="calender_select">ok</string>
    <string name="entry">立即体验</string>
    <string name="login_edaccount">用户名/手机号</string>
    <string name="login_edpwd">密码</string>
    <string name="login_btnok">登录</string>
    <string name="register_account">请输入手机号</string>
    <string name="register_pwd">请输入密码</string>
    <string name="register_pwd_again">请确认密码</string>
    <string name="register_next">注册</string>
    <string name="verification_code">验证码</string>
    <string name="send_verification_code">获取验证码</string>
    <string name="confirm">确认</string>




    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_loading">正在加载...</string>
    <string name="nomore_loading">没有了</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成</string>
    <string name="loading_done">加载完成</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <!--MaterialLogin-->
    <string name="login">欢迎</string>
    <string name="login_fogotpwd">忘记密码？</string>
    <string name="logout">退出登陆</string>
    <string name="account_nba_calender">NBA日历</string>
    <string name="account_feed_back">意见反馈</string>
    <string name="share_to">分享到</string>
    <string name="share_app_description">NBABox:</string>
    <string name="version"> 版本:</string>
    <string name="about_app_content">
        1、本应用仅供娱乐，为用户提供便利，请勿用作其他用途。\n
        2、本应用不发布、下载、存储或者篡改第三方流媒体服务器的内容。\n
        3、本应用提供的内容都来自网络免费资源以及Flash视频，相关内容不代表本应用立场。\n
        4、理性使用本应用，不要添加陌生人好友避免上当受骗。\n
        5、小游戏在线地址：https://chvin.github.io/react-tetris/?lan=en，游戏作者Github:https://github.com/chvin 。 \n
        6、如有您有异议，请联系我。\n
    </string>
    <string name="about_title">关于应用</string>
    <string name="set_clear_cache">清除缓存</string>
    <string name="set_original_splash">是否使用启动页</string>
    <string name="set_other_setting">其他设置</string>
    <string name="set_current_cache">当前缓存为 </string>
    <string name="set_check_version">检查更新</string>
    <string name="set_feedback">应用反馈</string>
    <string name="set_post_feedback">提建议或反馈bug</string>
    <string name="action_about">关于</string>
    <string name="LoginFailed">登陆失败</string>
    <string name="login_hint">请登录</string>
    <string name="had_logined">您已登陆!</string>
    <string name="cctv5_1">CCTV5 官网一</string>
    <string name="cctv5_2">CCTV5 官网二</string>
    <string name="Tencent">腾讯官网</string>
    <string name="HaveSigned">您已经注册过了!</string>
    <string name="register_username">请输入用户名</string>
    <string name="SignedSuccess">注册成功!</string>
    <string name="forget_account">请输入手机号</string>
    <string name="UpdateSuccess">修改密码成功</string>
    <string name="downloadUrl">https://www.pgyer.com/j8tq</string>
    <string name="has_no_network">无网络连接!</string>
    <string name="menu_tv">电视</string>
    <string name="welfare_perference">福利</string>
    <string name="share">分享</string>
    <string name="sharePhotoFailed">分享图片失败</string>


</resources>
