<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_group_content">
        <item
            android:id="@+id/menu_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/menu_news" />

        <item
            android:id="@+id/menu_live"
            android:icon="@drawable/ic_menu_live"
            android:title="@string/menu_live" />

        <item
            android:id="@+id/menu_performance"
            android:icon="@drawable/ic_menu_performance"
            android:title="@string/menu_performance" />

        <item
            android:id="@+id/menu_data"
            android:icon="@drawable/ic_menu_data"
            android:title="@string/menu_data" />


    </group>

    <group android:id="@+id/menu_group_account">
        <item
            android:id="@+id/menu_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/menu_setting" />

    </group>

    <group android:id="@+id/menu_group_other">
        <item
            android:id="@+id/menu_game"
            android:icon="@drawable/ic_game"
            android:title="@string/menu_game" />

        <item
            android:id="@+id/menu_tv"
            android:icon="@drawable/ic_tv"
            android:title="@string/menu_tv" />

        <item
            android:id="@+id/menu_welfare"
            android:icon="@drawable/ic_tv"
            android:title="@string/welfare_perference" />

    </group>

</menu>