<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smartrefresh.layout.SmartRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:srlEnablePureScrollMode="true"
    app:srlEnableLoadMore="true"
    app:srlDragRate="0.25"
    android:background="#ebebef"
    >
        <RelativeLayout
            android:id="@+id/profile"
            android:background="#ebebef"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/detail_bg"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:src="@drawable/staples"
                app:layout_collapseParallaxMultiplier="0.7"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />


            <ImageView
                android:id="@+id/main_img"
                android:layout_marginTop="50dp"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:transitionName="login"
                android:src="@drawable/ic_launcher"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:id="@+id/account_name"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/main_img"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_hint"
                android:textSize="@dimen/dimens_15sp"
                />

            <LinearLayout
                android:background="#ebebef"
                android:id="@+id/account_linear"
                android:orientation="vertical"
                android:layout_below="@id/detail_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.hcworld.nbalive.UI.widget.AccountItemView
                    android:layout_marginTop="20dp"
                    android:id="@+id/account_nba_calender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    app:show_bottomline="false"
                    app:show_leftimg="@drawable/ic_calender"
                    app:show_text="@string/account_nba_calender" />



                <com.hcworld.nbalive.UI.widget.AccountItemView
                    android:id="@+id/account_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    app:show_bottomline="false"
                    app:show_leftimg="@drawable/ic_share_24dp"
                    app:show_text="分享" />


                <com.hcworld.nbalive.UI.widget.AccountItemView
                    android:id="@+id/account_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginTop="10dp"
                    app:show_bottomline="false"
                    app:show_leftimg="@drawable/ic_about_24dp"
                    app:show_text="关于" />

                <com.hcworld.nbalive.UI.widget.AccountItemView
                    android:id="@+id/account_feed_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_marginTop="10dp"
                    app:show_bottomline="false"
                    app:show_leftimg="@drawable/ic_feed_back_24dp"
                    app:show_text="@string/account_feed_back" />


                <Button
                    android:id="@+id/btn_logout"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_selector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textColor="@color/black"
                    />

            </LinearLayout>
    </RelativeLayout>

</com.scwang.smartrefresh.layout.SmartRefreshLayout>

