<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    >
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/tv_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="19sp"
                    android:textColor="#fff"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="55dp"
                    />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <com.shuyu.gsyvideoplayer.video.StandardGSYVideoPlayer
        android:id="@+id/detail_player"
        android:layout_width="match_parent"
        android:layout_height="@dimen/post_media_height" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBg"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <Button
                android:id="@+id/live_cctv5_1"
                android:layout_marginTop="5dp"
                android:text="@string/cctv5_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_selector"
                />
            <Button
                android:id="@+id/live_cctv5_2"
                android:layout_marginTop="5dp"
                android:text="@string/cctv5_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_selector"
                />
            <Button
                android:id="@+id/live_tencent"
                android:layout_marginTop="5dp"
                android:text="@string/Tencent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_selector"
                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>