<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



        <android.support.v7.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="350dp"
            android:layout_height="420dp"
            android:layout_centerInParent="true"
            app:cardCornerRadius="7dp"
            android:layout_gravity="center"
            app:cardUseCompatPadding="true">



            <LinearLayout
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/login_account_textinput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="@color/colorPrimaryOverlay"
                        app:errorTextAppearance="@style/MyErrorStyle"
                        app:errorEnabled="true"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        >

                        <EditText
                            android:id="@+id/login_edname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:hint="@string/login_edaccount"
                            android:paddingLeft="10dp"
                            android:maxLines="1"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/primary"
                            android:textSize="15sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorTextAppearance="@style/MyErrorStyle"
                        app:counterEnabled="true"
                        app:counterMaxLength="10"
                        android:layout_marginTop="8dp"
                        android:id="@+id/login_pwd_textinput"
                        app:errorEnabled="true"
                        app:hintTextAppearance="@style/hintAppearance"
                        app:passwordToggleTint="@color/colorPrimary"
                        android:textColorHint="@color/colorPrimaryOverlay"
                        app:passwordToggleEnabled="true"
                        android:layout_marginBottom="8dp"

                        >

                        <EditText
                            android:id="@+id/login_edpwd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:hint="@string/login_edpwd"
                            android:paddingLeft="10dp"
                            android:inputType="textPassword"
                            android:textColor="@color/primary"
                            android:maxLines="1"
                            android:textSize="15sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/login_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:paddingBottom="10dp"
                        android:paddingLeft="60dp"
                        android:paddingRight="60dp"
                        android:paddingTop="10dp"
                        android:text="@string/login_btnok"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:background="@drawable/btn_drawable"
                        />



                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal">


                    <TextView
                        android:id="@+id/login_tvfogot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_fogotpwd" />
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


    <android.support.design.widget.FloatingActionButton

        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/cardview"
        app:srcCompat="@drawable/ic_add_24dp"
        android:transitionName="login"
        app:backgroundTint="#03a9f4"
        android:layout_marginTop="20dp"
        app:fabSize="normal" />


</RelativeLayout>
