<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <FrameLayout
        android:layout_centerInParent="true"
        android:paddingTop="10dp"
        android:layout_width="370dp"
        android:layout_height="530dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/forget_cardview"
                android:layout_width="370dp"
                android:layout_height="500dp"
                app:cardCornerRadius="7dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                app:cardUseCompatPadding="true"
                app:cardElevation="3dp">

                <LinearLayout
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="15dp">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/forget_account_text_input"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColorHint="@color/colorPrimaryOverlay"
                            app:errorTextAppearance="@style/MyErrorStyle"
                            app:errorEnabled="true"
                            app:counterMaxLength="11"
                            >

                            <EditText
                                android:id="@+id/forget_account"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:hint="@string/forget_account"
                                android:paddingLeft="10dp"
                                android:layout_marginBottom="8dp"
                                android:textSize="15sp"
                                android:textColor="@color/primary"
                                android:textColorHint="@color/hintTextColor"
                                android:inputType="number"
                                android:maxLength="11"
                                />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        >

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="200dp"
                            android:layout_height="match_parent"
                            app:errorTextAppearance="@style/MyOverflowText"
                            android:id="@+id/forget_verification_input"
                            app:errorEnabled="true"
                            app:hintTextAppearance="@style/hintAppearance"
                            app:counterMaxLength="4"
                            >
                            <EditText
                                android:id="@+id/forget_verification"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:hint="@string/verification_code"
                                android:paddingLeft="10dp"
                                android:textColor="@color/primary"
                                android:textColorHint="@color/primary"
                                android:textSize="15sp"
                                android:layout_marginBottom="8dp"
                                android:inputType="number"
                                android:maxLength="4"
                                />
                        </android.support.design.widget.TextInputLayout>




                        <!--         <Button
                                     android:id="@+id/btn_send_verifi_code"
                                     android:layout_width="100dp"
                                     android:layout_height="35dp"
                                     android:layout_marginRight="20dp"
                                     android:text="@string/send_verification_code"
                                     android:textColor="@color/colorPrimaryDark"
                                     android:background="@color/base"
                                     android:textSize="12sp"/>
         -->

                        <TextView
                            android:id="@+id/forget_tv_get_code"
                            android:layout_width="wrap_content"
                            android:layout_height="26dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="14dp"
                            android:gravity="center"
                            android:paddingLeft="6dp"
                            android:paddingRight="6dp"
                            android:text="获取验证码"
                            android:textColor="@color/colorPrimaryDark"
                            android:background="@drawable/validate_code_normal_bg"
                            android:textSize="12sp" />

                    </RelativeLayout>



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp">


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:errorTextAppearance="@style/MyOverflowText"
                            android:id="@+id/forget_pwd_text_input"
                            app:errorEnabled="true"
                            app:hintTextAppearance="@style/hintAppearance"
                            app:passwordToggleTint="@color/colorPrimary"
                            app:passwordToggleTintMode="multiply"
                            app:passwordToggleEnabled="true"

                            >

                            <EditText
                                android:id="@+id/forget_edpwd"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:hint="@string/register_pwd"
                                android:paddingLeft="10dp"
                                android:textColor="@color/primary"
                                android:textColorHint="@color/primary"
                                android:inputType="textPassword"
                                android:textSize="15sp"
                                android:layout_marginBottom="8dp"
                                />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:errorTextAppearance="@style/MyOverflowText"
                            android:id="@+id/forget_repwd_text_input"
                            app:errorEnabled="true"
                            app:hintTextAppearance="@style/hintAppearance"
                            app:passwordToggleTint="@color/colorPrimary"
                            app:passwordToggleTintMode="multiply"
                            app:passwordToggleEnabled="true"
                            >

                            <EditText
                                android:id="@+id/forget_edpwd_again"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:hint="@string/register_pwd_again"
                                android:paddingLeft="10dp"
                                android:shadowColor="@color/colorPrimaryOverlay"
                                android:textColor="@color/primary"
                                android:textColorHint="@color/primary"
                                android:inputType="textPassword"
                                android:textSize="15sp"
                                android:layout_marginBottom="8dp"
                                />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>


                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="@dimen/dp_10"
                        >

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/forget_confirm_btn_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:paddingBottom="10dp"
                            android:paddingLeft="60dp"
                            android:paddingRight="60dp"
                            android:paddingTop="10dp"
                            android:text="@string/smssdk_confirm"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:background="@drawable/btn_drawable"
                            />

                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </ScrollView>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/forget_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_plus_x"
            android:transitionName="login"
            app:backgroundTint="@color/colorPrimary"
            android:layout_gravity="center_horizontal|top"
            app:fabSize="normal" />

    </FrameLayout>
</RelativeLayout>
